# discord-overlay

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INVESTIGATION_RESULTS.md  Makefile  README.md  coverage-baseline.txt  lcov.info  tarpaulin-report.html
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml
assets/: hypr-overlay.service
coverage/: tarpaulin-report.html
scripts/: check-coverage.sh  generate-coverage-badge.py
src/: avatar.rs  config.rs  discord.rs  handlers.rs  latency.rs  main.rs  main.rs.bak  render.rs  render.rs.bak  render_error.rs  state.rs  state.rs.bak
src/discord/: auth.rs  client.rs  handlers.rs  ipc.rs  mod.rs  parser.rs  types.rs
src/render/: compile.rs  draw.rs  egl.rs  egl_context.rs  math.rs  mod.rs  program.rs  program_gl.rs  program_locations.rs  shaders.rs  text.rs  textures.rs
src/state/: mod.rs  participant.rs
tests/: discord_ipc.rs
