[package]
name = "hypr-overlay-wl"
version = "0.1.0"
edition = "2021"
description = "Wayland-native Discord voice overlay for Hyprland"
homepage = "https://github.com/ggomes/discord-overlay"
repository = "https://github.com/ggomes/discord-overlay"
license = "MIT"
keywords = ["wayland", "discord", "hyprland", "overlay", "voice"]
categories = ["multimedia"]
readme = "README.md"

[dependencies]
smithay-client-toolkit = "0.20"
calloop = "0.14"
calloop-wayland-source = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
khronos-egl = { version = "6", features = ["dynamic"] }
wayland-egl = "0.32"
glow = "0.17"
wayland-backend = { version = "0.3", features = ["client_system"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
fontdue = "0.9"
toml = "1"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
inotify = "0.11"

[dev-dependencies]
serial_test = "0.5"
